--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <i class="header-toggle d-xl-none bi bi-list"></i>
 
     <div class="profile-img">
-      <img src="D:\Portfolio files\iPortfolio-1.0.0\assets\img\gopi.jpg" alt="" class="img-fluid rounded-circle">
+      <img src="https://github.com/dhanushgopi2456/dhanush-portfolio/blob/main/assets/img/gopi.jpg" alt="" class="img-fluid rounded-circle">
     </div>
 
     <a href="index.html" class="logo d-flex align-items-center justify-content-center">
