--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     <!-- Hero Section -->
     <section id="hero" class="hero section dark-background">
 
-      <img src="C:\Users\dhanush gopi\Downloads\gopi7.jpg" width="1px" height="1px" alt="" data-aos="fade-in" class="">
+      <img src="assets/img/gopi7.jpg" width="1px" height="1px" alt="" data-aos="fade-in" class="">
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
         <h2>Dhanush Gopi</h2>
