--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 
         <div class="row gy-4 justify-content-center">
           <div class="col-lg-4">
-            <img src="C:\Users\dhanush gopi\Downloads\gopi7.jpg" class="img-fluid" alt="">
+            <img src="assets/img/gopi7.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 content">
             <h2>Web Developer &amp; Data Analyst.</h2>
