--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@
         <div class="project-box" style="border: 2px solid #007bff; padding: 20px; border-radius: 15px; background-color: #f8f9fa; box-shadow: 0 4px 8px rgba(0,0,0,0.1);">
             <div class="row">
                 <div class="col-lg-5 col-md-10 portfolio-item isotope-item filter-app">
-                    <img src="D:\Portfolio files\iPortfolio-1.0.0\assets\img\portfolio\Vehicle Management Image.webp" class="img-fluid" alt="" style="border-radius: 10px;">
+                    <img src="assets/img/portfolio/Vehicle Management Image.webp" class="img-fluid" alt="" style="border-radius: 10px;">
                 </div>
                 <div class="col-lg-7">
                     <p style="text-align: justify; margin-top: 15px;">
