--- a/index.html
+++ b/index.html
@@ -391,7 +391,7 @@
       <div class="project-box" style="border: 2px solid #007bff; padding: 20px; border-radius: 15px; background-color: #f8f9fa; box-shadow: 0 4px 8px rgba(0,0,0,0.1);">
           <div class="row">
               <div class="col-lg-5 col-md-10 portfolio-item isotope-item filter-app">
-                  <img src="D:\Portfolio files\iPortfolio-1.0.0\assets\img\portfolio\Data analysis using Python.webp" class="img-fluid" alt="" style="border-radius: 10px;">
+                  <img src="assets/img/portfolio/Data analysis using Python.webp" class="img-fluid" alt="" style="border-radius: 10px;">
               </div>
               <div class="col-lg-7">
                   <p style="text-align: justify; margin-top: 15px;">I Worked on Data Analysis using Python  demonstrate hands-on expertise in exploratory data analysis (EDA), data visualization, and machine learning techniques. The projects cover a wide range of datasets, applying Pandas, NumPy, Matplotlib, and Seaborn for data wrangling and visualization. Advanced techniques such as linear regression, decision trees, and random forests were implemented for predictive modeling. Specialized projects, including Brain Tumor and Skin Cancer analysis, showcase the application of data analysis in the healthcare domain. Additionally, real-time data handling through weather API analysis and sequential data processing using Recurrent Neural Networks (RNN) highlight versatility. All projects are well-documented in Jupyter Notebooks and hosted on GitHub for transparency and future learning.
