--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
         <h2>Dhanush Gopi</h2>
-        <p>I'm <span class="typed" data-typed-items="Web Developer, Data Analyst"></span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span></p>
+        <p>Aspiring <span class="typed" data-typed-items="Software Engineer, AI/ML Enthusiastic"></span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span></p>
       </div>
 
     </section><!-- /Hero Section -->
@@ -89,7 +89,8 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>About Me</h2>
-        <p>I am a highly motivated and passionate individual with a deep enthusiasm for web development and data analysis, driven by a constant desire to learn and innovate. My goal is to contribute my skills in building intuitive web applications and uncovering valuable insights from data to support strategic decision making.</p>
+        <p>To leverage my project experience in AI and web development in a challenging role that improves
+ continuous learning and contributes to organizational success.</p>
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
@@ -99,7 +100,7 @@
             <img src="assets/img/gopi7.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 content">
-            <h2>Web Developer &amp; Data Analyst.</h2>
+            <h2>Aspiring Software Engineer &amp; AI/ML Enthusiastic.</h2>
             <p class="fst-italic py-3">
                Personal Details
             </p>
@@ -122,7 +123,7 @@
               </div>
             </div>
             <p class="py-3">
-              I did the projects on Employee and Vehicle  Management System using Django and Flask frameworks.
+              I did the projects on Object Dtection , Stall  Management System , Employee Management System  using React Js, Django and Flask frameworks.
             </p>
           </div>
         </div>
@@ -216,7 +217,7 @@
 
             <div class="resume-item pb-0">
               <h4>DHANUSH GOPI KAVALA</h4>
-              <p><em>Passionate on Data Analyst and Web Development</em></p>
+              <p><em>Passionate on Software Engineer and AI/ML Enthusiastic </em></p>
               <ul>
                 <li>B. Tech – Computer Science and Engineering </li>
 		            <li>Gender: Male</li>
@@ -245,7 +246,7 @@
               <p><em>Sri Shiridi Sai Em School, Tadepalligudem</em></p>
 
               <h3 class="resume-title">Tools and Technologies</h3>
-                  <ul><li>Visual Studio Code, MS Word, MS Excel, Jupiter notebook, Google Collab, Python Idle, Oracle Sql, Dev C++. 
+                  <ul><li>,Java Eclipse , Visual Studio Code, MS Word, MS Excel, Jupiter notebook, Google Collab, Python Idle, Oracle Sql, Dev C++. 
                   </li></ul>
               <!-- Edn Resume Item -->
            
@@ -267,15 +268,15 @@
             <div class="resume-item">
               <b><h4 class="resume-title">Technical Skills and Certifications</h4></b>
               <ul>
-                <li>Programming Languages  : Core C++, Java, Python, My SQL, DSA (basic)..</li>
-                <li> Web Technologies	: HTML, CSS, JavaScript,Flask, Django (frameworks),React.JS.</li>
+                <li>Programming Languages  : Core Java,C++, Python, My SQL, DSA (basic)..</li>
+                <li> Web Technologies	: HTML, CSS, JavaScript, Flask, Django (frameworks),React.JS.</li>
                 <li>  Tools: Visual Studio Code,MS Word, Jupiter notebook, Dev C++.</li>
                 <li><b> Certifications and Paper Publications:</b></li>
+				  	<li>5)Cloud Infrastructure 2025 DevOps Professional(Offered By Oracle).</li>
 		            <li>1)Azure AI Fundamentals (Ai-900 Offered by Microsoft).</li>
                 <li>2)Data Structures and Algorithms using java(offered by NPTEL)</li>
 		            <li>3)NPTEL Web base technologies and multimedia applications(offered by IGNOU)</li>
-		            <li>4)Energy literacy (offered by Swaraj Foundation)</li>
-		            <li>5)Carrer Strokes (offered by British council)</li>
+
                 <b><li>Object Detction Uisng YOLO-v9 has been Successfully published under the Hinweis Third International. 
                  This Conference on Artificial Intelligence and Data Science (AIDE-2024). </li></b>
 	
