--- a/index.html
+++ b/index.html
@@ -335,9 +335,9 @@
                 </div>
                 <div class="col-lg-7">
                     <p style="text-align: justify; margin-top: 15px;">
-                        Developed Vehicle Management System project using Flask framework, a web-based application designed to efficiently manage vehicle-related data. The system enables users to perform Create, Read, Update, and Delete (CRUD) operations on various vehicle components, including car colors, categories, models, variants, engines, and individual cars. It incorporates secure user authentication with role-based access control, distinguishing between admin and regular users. The application is designed with a user-friendly interface, utilizing HTML and CSS for the frontend, and integrates with a MySQL database for robust data management. This system streamlines the management of vehicle inventories, making it suitable for car dealerships or rental services.
-                    </p>
-                    <div style="margin-top: 15px;">
+	                        The Online Stall Booking System is a full-stack web application designed to simplify the process of booking stalls for events such as exhibitions and trade fairs. Built with React.js and Vite on the frontend, Java/Spring Boot (optional) on the backend, and MySQL for data management, the system offers a responsive and user-friendly interface for stall booking. Users can register, view real-time stall availability, and book stalls based on location and status, while administrators can log in to manage stalls, monitor bookings, and perform CRUD operations through a dedicated dashboard. The project emphasizes scalability and modular design, with planned enhancements including online payment integration, email/SMS notifications, dynamic stall pricing, and interactive map visualization for better usability.
+					</p>
+					<div style="margin-top: 15px;">
                         <a href="https://github.com/dhanushgopi2456/Vehicle_management" target="_blank">
                             <button class="btn btn-primary">View Project on GitHub</button>
                         </a>
